--- a/03-vars.yml
+++ b/03-vars.yml
@@ -1,3 +1,4 @@
+# play level at variables
 - name: play level  variables
   hosts: all
   vars:
@@ -5,4 +6,6 @@
   tasks:
       - name: print URL
         ansible.builtin.debug:
-          msg: URL-{{ URL }}
+          msg: rama-{{ URL }}
+
+  # Demo on task level
