Ansible_Demo_on_ variables from roles_v6

--- a/03-vars.yml
+++ b/03-vars.yml
@@ -29,5 +29,11 @@
       ansible.builtin.debug:
         msg: rama-{{ URL}}
 
+# var from roles
+
+- name: load variable from file
+  hosts: all
+  roles:
+    - sample
 
 
