--- a/roles/sample/tasks/main.yml
+++ b/roles/sample/tasks/main.yml
@@ -2,3 +2,6 @@
    ansible.builtin.debug:
      msg: Hello from role sample
 
+-  name: print variables from roles
+   ansible.builtin.debug:
+     msg: URL- {{ URL }}
