Ansible_Demo_on_ variables from roles_v9

--- a/03-vars.yml
+++ b/03-vars.yml
@@ -36,6 +36,7 @@
 - name: variable from roles
   hosts: all
   vars:
+    URL: role.example.com
     URL_PLAY: play.example.com
   roles:
     - sample
