Ansible_Demo_on_ variables from roles_v9

--- a/03-vars.yml
+++ b/03-vars.yml
@@ -41,5 +41,12 @@
   roles:
     - sample
 
+- name: Demo on register variables
+  hosts: all
+  tasks:
+    - name: Run uptime shell command
+      ansible.builtin.shell: uptime
+
+
 
 
