Ansible_Demo_on_ variables from roles_ output_v10

--- a/03-vars.yml
+++ b/03-vars.yml
@@ -46,6 +46,12 @@
   tasks:
     - name: Run uptime shell command
       ansible.builtin.shell: uptime
+      ## Now I want to store that one into a variable
+      register: output
+    - name: Print output
+      ansible.builtin.debug:
+        msg: '{{ output }}'
+
 
 
 
