Ansible_Demo_on_ variables from roles_ output_v11

--- a/03-vars.yml
+++ b/03-vars.yml
@@ -51,6 +51,8 @@
     - name: Print output
       ansible.builtin.debug:
         msg: '{{ output }}'
+        # if I wasnt to print particulat KEY output ( WE can use DOT(.))
+        msg2: '{{ output.stdout }}'
 
 
 
