Ansible_Demo_on_ variables from roles_ output_v11

--- a/03-vars.yml
+++ b/03-vars.yml
@@ -50,9 +50,9 @@
       register: output
     - name: Print output
       ansible.builtin.debug:
-        msg: '{{ output }}'
+        msg: '{{ output.stdout }}'
         # if I wasnt to print particulat KEY output ( WE can use DOT(.))
-        msg2: '{{ output.stdout }}'
+        #msg2: '{{ output.stdout }}'
 
 
 
